[package]
name = "rpi_watchdog"
version = "0.1.0"
authors = ["Philipp Mahler <philipp.mahler@pmcgn.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }